src/Tests/Error/ClassHasNotAttributeError.php
<?php

namespace ColdBolt\Tests\Error;

use ColdBolt\Tests\Error\AssertError;

class ClassHasNotAttributeError extends AssertError
{
}
